# quaca

./: .README.md.swp  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  gitrout.sh  tags
app/: CMakeLists.txt  Makefile
code/: .Makefile.swp  .cyl.h.swp  .header.h.swp  .make.sh.swo  .tester.c.swp  IntOmega  Makefile  Omega  Omega.c  QF  QF.c  cyl.h  doxconf.bak  green.h  header.h  make.sh  om  qf  ref  ref.c  tester  tester.c
data/: .paratestZ.in.swp  .paratest_zerocorr.in.swp  .test.csv  .test.ini  .tutorial.csv  .tutorial.ini  .tutorial.json  F_r_za.csv  F_r_za.json  F_t_za.csv  F_t_za.json  F_za.csv  F_za.json  com.csv  decay.csv  decay.json  diss_plot.csv  diss_plot.json  intravaia16.ini  mu.csv  mu_1.csv  mu_2.csv  mu_r.csv  mu_r.json  mu_r2.csv  mu_r2.json  mu_t.csv  mu_t.json  mu_t2.json  mu_t_wo_vac.json  mu_t_wo_vac2.csv  mu_t_wo_vac2.json  mu_tot.csv  paratest.in  paratest.out  paratestAna.in  paratestAna.out  paratestCyl.in  paratestL.in  paratestL.out  (+14 more)
doc/: conf.py  development.rst  documentation.rst  doxconf  index.rst  installation.rst  todo.rst  usage.rst
docs/: CONTRIBUTING.md  README.md  Relations_and_Tests.aux  Relations_and_Tests.tex  VacuumGreen.aux  VacuumGreen.bbl  VacuumGreen.blg  VacuumGreen.fdb_latexmk  VacuumGreen.fls  VacuumGreen.tex  _coverpage.md  _sidebar.md  api.md  commandlineapi.md  development.md  doxconf  first_calculation.md  gettingstarted.md  greens.md  greenstensor.md  index.html  package-lock.json  (+4 more)
src/: .main.c.swp  .plate.c.swp  CMakeLists.txt  Makefile  cyl.c  cyl.h  main.c  plate.c  qfPlate  qfPlate.c  qfhelp.c  tags
src/Calculations/: Integration.txt  Integrations.cpp  Integrations.h  QuantumFriction.cpp  QuantumFriction.h
src/Friction/: Friction.cpp  Friction.h
src/GreensTensor/: .nfs0000000000d8d22b00003511  GreensTensor.cpp  GreensTensor.h  GreensTensorFactory.cpp  GreensTensorFactory.h  GreensTensorPlate.cpp  GreensTensorPlate.h  GreensTensorPlateMagnetic.cpp  GreensTensorPlateMagnetic.h  GreensTensorPlateVacuum.cpp  GreensTensorPlateVacuum.h  GreensTensorVacuum.cpp  GreensTensorVacuum.h
src/GreensTensor/Permittivity/: Permittivity.cpp  Permittivity.h  PermittivityDrude.cpp  PermittivityDrude.h  PermittivityFactory.cpp  PermittivityFactory.h
src/GreensTensor/ReflectionCoefficients/: ReflectionCoefficients.h  ReflectionCoefficientsFactory.cpp  ReflectionCoefficientsLocBulk.cpp  ReflectionCoefficientsLocBulk.h  ReflectionCoefficientsLocSlab.cpp  ReflectionCoefficientsLocSlab.h
src/Looper/: Looper.cpp  Looper.h  LooperBeta.cpp  LooperBeta.h  LooperFactory.cpp  LooperFactory.h  LooperOmega.cpp  LooperOmega.h  LooperV.cpp  LooperV.h  LooperZa.cpp  LooperZa.h
src/MemoryKernel/: LorentzMemoryKernel.cpp  LorentzMemoryKernel.h  MemoryKernel.h  MemoryKernelFactory.cpp  MemoryKernelFactory.h  OhmicMemoryKernel.cpp  OhmicMemoryKernel.h  SinglePhononMemoryKernel.cpp  SinglePhononMemoryKernel.h
src/Options/: Options.cpp  Options.h
src/Permittivity/: Permittivity.h  PermittivityDrude.cpp  PermittivityDrude.h  PermittivityFactory.cpp  PermittivityFactory.h  PermittivityLorentz.cpp  PermittivityLorentz.h  PermittivityLorentzBath.cpp  PermittivityLorentzBath.h  PermittivityLorentzNoBath.cpp  PermittivityLorentzNoBath.h  PermittivityLorentzOhmic.cpp  PermittivityLorentzOhmic.h
src/Polarizability/: MemoryKernel.cpp  MemoryKernel.h  MemoryKernelFactory.cpp  OhmicMemoryKernel.cpp  OhmicMemoryKernel.h  Polarizability.cpp  Polarizability.h  PolarizabilityBath.cpp  PolarizabilityBath.h  PolarizabilityFactory.cpp  PolarizabilityFactory.h  PolarizabilityNoBath.cpp  PolarizabilityNoBath.h  PolarizabilityNoBathMagnetic.cpp  PolarizabilityNoBathMagnetic.h
src/Polarizability/MemoryKernel/: MemoryKernel.h  MemoryKernelFactory.cpp  MemoryKernelFactory.h  Memorykernel.cpp  OhmicMemoryKernel.cpp  OhmicMemoryKernel.h
src/PowerSpectrum/: PowerSpectrum.cpp  PowerSpectrum.h  PowerSpectrumFactory.cpp  PowerSpectrumFactory.h  PowerSpectrumHarmOsc.cpp  PowerSpectrumHarmOsc.h  PowerSpectrumHarmOscMagnetic.cpp  PowerSpectrumHarmOscMagnetic.h
src/ReflectionCoefficients/: ReflectionCoefficients.h  ReflectionCoefficientsFactory.cpp  ReflectionCoefficientsFactory.h  ReflectionCoefficientsLocBulk.cpp  ReflectionCoefficientsLocBulk.h  ReflectionCoefficientsLocSlab.cpp  ReflectionCoefficientsLocSlab.h
src/h/: cyl.h  plate.h  qfhelp.h
src/main/: IntOmega.c  Omega.c  tester.c
src/resources/: cyl.c  cyl.h  plate.c  plate.h  qfhelp.c
test/IntegratedTests/: CMakeLists.txt  Makefile
test/IntegratedTests/Friction/: test_Friction_integrated.cpp
test/IntegratedTests/Polarizability/: test_PolarizabilityBath_integrated.cpp  test_PolarizabilityNoBath_integrated.cpp
test/Quick_Test/: CMakeLists.txt  quick_test.cpp
test/UnitTests/: CMakeLists.txt  Makefile  test_main.cpp
test/UnitTests/Calculations/: test_Integrations_unit.cpp
test/UnitTests/Friction/: test_Friction_unit.cpp
test/UnitTests/GreensTensor/: test_GreensTensorPlateMagnetic_unit.cpp  test_GreensTensorPlateVacuum_unit.cpp  test_GreensTensorPlate_unit.cpp  test_GreensTensorVacuum_unit.cpp
test/UnitTests/Looper/: test_LooperBeta_unit.cpp  test_LooperOmega_unit.cpp  test_LooperV_unit.cpp  test_LooperZa_unit.cpp
test/UnitTests/MemoryKernel/: test_LorentzMemoryKernel_unit.cpp  test_OhmicMemoryKernel_unit.cpp  test_SinglePhononMemoryKernel_unit.cpp
test/UnitTests/Options/: test_Options_unit.cpp
test/UnitTests/Permittivity/: test_PermittivityDrude_unit.cpp  test_PermittivityLorentzBath_unit.cpp  test_PermittivityLorentzNoBath_unit.cpp  test_PermittivityLorentzOhmic_unit.cpp  test_PermittivityLorentz_unit.cpp
test/UnitTests/Polarizability/: test_PolarizabilityBath_unit.cpp  test_PolarizabilityNoBathMagnetic_unit.cpp  test_PolarizabilityNoBath_unit.cpp
test/UnitTests/PowerSpectrum/: test_PowerSpectrum.cpp  test_PowerSpectrumHarmOsc.cpp  test_PowerSpectrumHarmOscMagnetic.cpp
test/UnitTests/ReflectionCoefficients/: test_ReflectionCoefficientsLocBulk_unit.cpp  test_ReflectionCoefficientsLocSlab_unit.cpp
(+194 files in other folders)
